@@ -3,6 +3,7 @@ git-annex (8.20210311) UNRELEASED; urgency=medium
   * export: When a submodule is in the tree to be exported, skip it.
   * import: When the previously exported tree contained a submodule,
     preserve it in the imported tree so it does not get deleted.
+  * export --json: Fill in the file field.
 
  -- Joey Hess <id@joeyh.name>  Fri, 12 Mar 2021 12:06:37 -0400
 
